# comfy-ecaj-nodes

./: .gitignore  AGENTS.md  README.md  __init__.py  comfy-ecaj-nodes.meta.yaml  comfy-ecaj-nodes.runs.yaml  comfy-ecaj-nodes.tasks.yaml  comfy-ecaj-nodes.yaml  conftest.py  project.inbox.yaml  project.plans.yaml  project.tasks.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
docs/: design.md
lib/: __init__.py  analysis.py  batch_groups.py  block_classify.py  clip_model_loader.py  divergence.py  executor.py  gpu_ops.py  model_loader.py  numerical_config.py  per_block.py  persistence.py  ranking.py  recipe.py  recipe_eval.py  sparsity.py  streaming_save.py  widen.py
modules/: foundation.yaml  main.yaml  widen.yaml
nodes/: block_config.py  block_config_flux.py  block_config_qwen.py  block_config_sdxl.py  block_config_sdxl_clip.py  block_config_zimage.py  clip_entry.py  clip_exit.py  clip_nodes.py  compose.py  diffusion_model_input.py  entry.py  exit.py  lora.py  merge.py  model_input.py
tests/: conftest.py  test_block_config.py  test_clip_entry.py  test_clip_exit.py  test_clip_model_loader.py  test_clip_nodes.py  test_compile_plan.py  test_compose_node.py  test_conftest_fixtures.py  test_diffusion_model_input_node.py  test_entry.py  test_executor.py  test_exit_node.py  test_exit_patch_install.py  test_exit_recipe_analysis.py  test_full_model_execution.py  test_graph.py  test_incremental_recompute.py  test_layer_type_classify.py  test_lora_block_strength.py  test_lora_loaders.py  test_lora_node.py  test_lora_set_scoping.py  test_memory_management.py  (+16 more)
(+78 files in other folders)
